--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-Flask==3.0.3
-openai==1.50.1
 annotated-types==0.6.0
 anyio==4.3.0
 blinker==1.7.0
@@ -8,6 +6,7 @@ click==8.1.7
 distro==1.9.0
 exceptiongroup==1.2.0
 Flask==3.0.3
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
